# oore.build

./: .gitignore  .woodpecker.yml  AGENTS.md  CLAUDE.md  Cargo.toml  DESIGN.md  Makefile  README.md  SUPPORT.md  package.json
configs/: shadcn-preset.txt
crates/oore/: Cargo.toml
crates/oore/src/: main.rs
crates/oored/: Cargo.toml  rbac_policy.csv
crates/oored/migrations/: 002_users_sessions_audit.sql  004_scm_integrations.sql  005_build_domain.sql  006_build_step_results.sql  007_build_logs.sql  008_project_default_branch.sql  013_pipeline_android_signing.sql
crates/oored/src/: artifacts.rs  auth.rs  background.rs  builds.rs  crypto.rs  extractors.rs  instance_settings.rs  lib.rs  logs.rs  main.rs  notification_channels.rs  notification_dispatch.rs  observability.rs  pipeline_signing.rs  pipelines.rs  projects.rs  rbac.rs  retention.rs  runners.rs  scheduler.rs  session.rs  storage.rs  store.rs  users.rs  util.rs
crates/oored/src/integrations/: github.rs  gitlab.rs  local_git.rs  mod.rs  webhooks.rs
crates/oored/tests/: artifact_storage_settings_integration.rs  build_concurrency.rs  external_access_security_integration.rs  local_login_integration.rs  logs_artifacts_integration.rs  project_pipeline_integration.rs  runner_integration.rs  setup_integration.rs  webhook_integration.rs
crates/oored/tests/common/: mod.rs
docs/: README.md  changes.md  documentation-guidelines.md  documentation-policy.md  platform-contract.md  scm-integration-v1.md  strict-guidelines.md  v1-roadmap.md  v1-user-journey.md
scripts/: apply-shadcn-preset.sh  check-feature-docs.sh  dev-fresh-setup.sh  install.sh  (+6 more)
(+231 files in other folders)
