[package]
name = "oore"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
dialoguer.workspace = true
dirs.workspace = true
hex.workspace = true
humantime.workspace = true
oore-contract = { path = "../oore-contract" }
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio = { workspace = true, features = ["net", "io-util"] }
url.workspace = true
uuid.workspace = true
chrono.workspace = true
sqlx.workspace = true
